# Playground

./: .gitignore  README.md  wordpress.config
Compilers/Lisp/: Makefile  Q&A.md  Readme.md  Readme.md.txt
Compilers/Lisp/include/: mpc_add_content.h
Compilers/Lisp/src/: evaluator.c  mpc_add_content.c
Compilers/Lisp/src/error_handling/: err_handling.c
Computer Graphics/OpenGL/: CMakeLists.txt  README
Computer Graphics/OpenGL/glad/: glad.c  glad.h
Computer Graphics/OpenGL/src/: main.cpp
Computer Graphics/OpenGL/src/1_create_window/: main.cpp
Computer_Graphics/OpenGL/: .gitignore  CMakeLists.txt  README  README.md  build.sh  clean.sh  make.sh
Computer_Graphics/OpenGL/Resources/Models/bunny/: license.txt  scene.gltf
Computer_Graphics/OpenGL/Resources/Models/wooden/: license.txt  scene.gltf
Computer_Graphics/OpenGL/Resources/Models/wooden_outline/: wooden_outline.glb  wooden_outline.gltf
Computer_Graphics/OpenGL/Resources/Shaders/3_shader_texture_3D/: default.vert
Computer_Graphics/OpenGL/Resources/Shaders/4_camera/: default.vert
Computer_Graphics/OpenGL/Resources/Shaders/5_lighting/: light.frag  light.vert
Computer_Graphics/OpenGL/Resources/Shaders/6_specular_maps/: default.frag
Computer_Graphics/OpenGL/Resources/Shaders/7_types_of_light/: default.frag
Computer_Graphics/OpenGL/Resources/Shaders/8_mesh/: default.frag  default.vert
Computer_Graphics/OpenGL/Resources/Shaders/9_stencil_culling/: default.frag  default.geom  default.vert  framebuffer.frag  framebuffer.vert  grass.frag  normal.frag  normal.geom  outlining.frag  outlining.vert
Computer_Graphics/OpenGL/Shaders/: default.frag  default.vert
Computer_Graphics/OpenGL/glad/: CMakeLists.txt
Computer_Graphics/OpenGL/include/: VAO.h  shaderClass.h
Computer_Graphics/OpenGL/include/3_shader_texture_3D/: EBO.h  Texture.h  VAO.h  VBO.h
Computer_Graphics/OpenGL/include/4_camera/: Camera.h  VAO.h
Computer_Graphics/OpenGL/include/5_lighting/: Camera.h  Texture.h
Computer_Graphics/OpenGL/include/6_specular_maps/: Camera.h  Texture.h  VAO.h
Computer_Graphics/OpenGL/include/7_types_of_light/: Camera.h  Texture.h  shaderClass.h
Computer_Graphics/OpenGL/include/8_mesh/: Camera.h  Mesh.h  Model.h  Texture.h  VAO.h  VBO.h
Computer_Graphics/OpenGL/include/9_stencil_culling/: Camera.h  EBO.h  Mesh.h  Model.h  Texture.h  shaderClass.h
Computer_Graphics/OpenGL/src/1_create_window/: main.cpp
Computer_Graphics/OpenGL/src/2_triangle/: main.cpp
Computer_Graphics/OpenGL/src/3_index_buffer/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Computer_Graphics/OpenGL/src/3_shader_texture_3D/: EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Computer_Graphics/OpenGL/src/4_camera/: Camera.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Computer_Graphics/OpenGL/src/5_lighting/: Camera.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp  stb.cpp
Computer_Graphics/OpenGL/src/6_specular_maps/: Camera.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Computer_Graphics/OpenGL/src/7_types_of_light/: Camera.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Computer_Graphics/OpenGL/src/8_mesh/: Camera.cpp  EBO.cpp  Mesh.cpp  Model.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Computer_Graphics/OpenGL/src/9_stencil_culling/: Camera.cpp  EBO.cpp  Mesh.cpp  Model.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
Computer_Graphics/RayTracing/: README.md  camera.h  color.h  helper.h  hittable.h  hittable_list.h  interval.h  main  main.cpp  make.sh  material.h  ray.h  sphere.h  vec3.h
Computer_Graphics/Vulkan/: .gitignore  CMakeLists.txt  README.md  make.sh
Computer_Graphics/Vulkan/include/: user_defined.h
Computer_Graphics/Vulkan/include/1_triangle/: lve_device.hpp  lve_model.hpp  lve_pipeline.hpp  lve_swap_chain.hpp  lve_window.hpp  triangle.hpp
Computer_Graphics/Vulkan/shaders/: CMakeLists.txt
Computer_Graphics/Vulkan/shaders/1_triangle/: default.frag  default.vert
Computer_Graphics/Vulkan/src/0_device_name/: main.cpp
Computer_Graphics/Vulkan/src/1_triangle/: lve_device.cpp  lve_model.cpp  lve_pipeline.cpp  lve_swap_chain.cpp  lve_window.cpp  main.cpp  triangle.cpp
Machine_Learning/mnist_ml/: CMakeLists.txt  README.md  clean.sh  make.sh
Machine_Learning/mnist_ml/include/: data.hpp  data_handler.hpp
Machine_Learning/mnist_ml/src/libdata/: data.cc  data_handler.cc
MultiThreading/: README.md
MultiThreading/POSIX version/: CMakeLists.txt  ContentSearch.cpp  ContentSearch.h  ContentSearch_POSIX.cpp  ContentSearch_POSIX.h  main.cpp
MultiThreading/WinAPI version/: .gitignore  ContentSearch_WINAPI.cpp  ContentSearch_WINAPI.h  MultiThreads-WINAPI.vcxproj
MultiThreads-WINAPI/: Allzeroes_v1.cpp  Allzeroes_v5.cpp  Allzeroes_v6.cpp  Allzeroes_v6_eg1.cpp  Allzeroes_v6_eg2.cpp  ContentSearch.cpp  ContentSearch.h  FileSearch.cpp  MultiThreads-WINAPI.sln  MultiThreads-WINAPI.vcxproj  README.md
MultiThreads-WINAPI/Auxiliary/: Auxiliary.sln  Auxiliary.vcxproj  ReaderDB_mutex.cpp  ReaderDB_semaphore.cpp  SlaveProcess.cpp
MultiThreads-WINAPI/Demo/: Allzeroes_v1.cpp  Allzeroes_v4.cpp  Allzeroes_v9.cpp
MultiThreads-WINAPI/demo/: Allzeroes_v2.cpp  Allzeroes_v3.cpp  Allzeroes_v6_eg2.cpp  Allzeroes_v7.cpp  Allzeroes_v8.cpp
OS/: .gitignore  bochs_config  bx_enh_dbg.ini  makefile  note.md  run
OS/src/bootloader/: boot.asm
OS/tools/fat/: fat.c
Web/: README.md
cpp/cpp1_Longest_common_subsequence/: .c.cpp.un~  a.out  c.cpp
cpp/cpp6041_Intersection_of_Multiple_Arrays/: README.md  main.cpp
hw/Java1长整数加减法/: .BigInteger.java.un~  BigInt.java  BigInteger.java  BigInteger.java.backup  Main.java
hw/Java2HoffmanCoding/: HTNode.java  HuffmanTree.java
hw/Java3ext_sort/sort/: Main.java
hw/cpp1_Longest_common_subsequence/: .make.sh.un~  c.cpp  make.sh
hw/sql_novice/: 第四章第五章sql作业.md
java/Java1长整数加减法/: .BigInteger.java.un~  BigInt.java
java/Java2HoffmanCoding/: HuffmanTree.java
java/Java3ext_sort/ext-sort/: .classpath  .project
(+6 files in other folders)
